--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 * {
-  color: red;
-  }
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(201, 229, 236);
+    background-color:rgb(17, 126, 93)
+    
+}
+
+figcaption {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    text-indent: 130px;
+    font-size: 10px
+}
+
+h1, h3 {
+    text-align: center;
+}
+
+.dogbutt {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
