--- a/style.css
+++ b/style.css
@@ -18,6 +18,5 @@ h1, h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100px;
-    height: 100px;
+    width: 50%;
 }
