--- a/style.css
+++ b/style.css
@@ -18,5 +18,6 @@ h1, h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    min-height: 100px;
+    min-width: 100px;
 }
